--- a/Style/master.css
+++ b/Style/master.css
@@ -28,22 +28,29 @@ h2 {
 
 .btn-group button {
 	background-color: #c9d6df;
-	height: 40px;
+	min-height: 40px;
+	min-width: 40px;
 }
 
-ion-icon {
-	font-size: 25px;
+.btn-cal {
+	font-weight: 900;
+	font-size: 20px;
 	text-align: center;
+	margin: auto;
 }
 
-.dropdown-toggle::after {
-    display:none;
+.btn-image {
+	width: 15px;
 }
 
 #dayBody {
 	width: 100%;
 	flex: 1 1 auto;
 	margin-top: 40px;
+}
+
+.dropdown-toggle {
+	height: 100%;
 }
 
 .dropdown-menu {
