Changed del button some more

--- a/Style/master.css
+++ b/Style/master.css
@@ -131,6 +131,15 @@ h2 {
 
 .btn-del-entry {
 	float: right;
+	border: 0;
+	background-color: transparent;
+	color: red;
+	font-size: 20px;
+}
+
+.btn-del-entry:hover {
+	cursor: pointer;
+	color: #c9d6df;
 }
 
 .attribution,
