--- a/Style/edit.css
+++ b/Style/edit.css
@@ -33,7 +33,7 @@ form {
 
 @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait) {
     body {
-        height: 1024px;
+        height: 80%;
     }
 }
 
@@ -46,7 +46,7 @@ form {
 
 /* iPhone 5
 You can also target devices with aspect ratio. */                       @media screen and (device-aspect-ratio: 40/71) {
-    body {                           
+    body {
         height: 500px;
     }
 }
