--- a/Style/edit.css
+++ b/Style/edit.css
@@ -31,7 +31,7 @@ form {
     flex: 1!important;
 }
 
-@media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait) {
+@media all and (device-width: 768px) {
     body {
         height: 80%;
     }
