--- a/Style/edit.css
+++ b/Style/edit.css
@@ -1,11 +1,18 @@
+:root {
+	--main-bg-color: #f0f5f9;
+	--secondary-bg-color: #52616b;
+	--secondary-muted-color: #c9d6df;
+}
+
 html {
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
+    background-color: var(--main-bg-color);
 }
 
 body {
     width: 100%;
-    height: 90%;
+    height: 100%;
     /* margin: 0;
     position: absolute;
     top: 50%;
