--- a/Style/edit.css
+++ b/Style/edit.css
@@ -6,19 +6,20 @@
 
 html {
     width: 100vw;
-    height: 90vh;
+    height: 100vh;
     background-color: var(--main-bg-color);
 }
 
 body {
     width: 100%;
     height: 100%;
-    /* margin: 0;
+    background-color: var(--main-bg-color);
+    margin: 0;
     position: absolute;
     top: 50%;
     left: 50%;
     -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%); */
+    transform: translate(-50%, -50%);
 }
 
 form {
@@ -36,4 +37,16 @@ form {
 
 .btn-group>button {
     flex: 1!important;
+}
+
+@media only screen and (max-width: 768px) {
+    html {
+        height: 90vh;
+    }
+
+    body {
+        width: 100%;
+        height: 100%;
+        background-color: var(--main-bg-color);
+    }
 }
