--- a/Style/edit.css
+++ b/Style/edit.css
@@ -11,9 +11,11 @@ html {
 }
 
 body {
-    width: 100%;
-    height: 100%;
-    background-color: var(--main-bg-color);
+    width: 30%;
+    padding: 20px 10px;
+    border: 1px solid var(--secondary-muted-color);
+    border-radius: 30px;
+    background-color: var(--secondary-muted-color);
     margin: 0;
     position: absolute;
     top: 50%;
